test/library/standard/Map/types/testNonNilableUnmanagedIndexingError.good
./MapTest.chpl:55: In function 'testMap':
./MapTest.chpl:88: error: illegal lvalue in assignment
./MapTest.chpl:92: error: cannot initialize variable 'zz' of type 'unmanaged T' from a 'borrowed T'
  testNonNilableUnmanagedIndexingError.chpl:11: called as testMap(type t = unmanaged T, param testIndexing = true)
